made background uniform globally; fixed child info header text going over image on mobile

--- a/client/src/components/DailyReport/ReportHeader/style.css
+++ b/client/src/components/DailyReport/ReportHeader/style.css
@@ -1,9 +1,6 @@
-body, html, .row {
-    background-color: white;
-}
-
-.image {
+#image {
     position: relative;
+    margin: 0 auto;
 }
 #banner-row {
     padding-top: 30px;
